bizinikiwi/pezframe/support/test/tests/pezpallet_ui/call_weight_inherited_invalid.stderr
error: expected `weight`
  --> tests/pezpallet_ui/call_weight_inherited_invalid.rs:36:20
   |
36 |     #[pezpallet::call(invalid)]
   |                       ^^^^^^^

error: expected parentheses
  --> tests/pezpallet_ui/call_weight_inherited_invalid.rs:57:20
   |
57 |     #[pezpallet::call = invalid]
   |                       ^
